[client] fix issues with chat input overflowing
## Motivation

Add too many resources causes the buttons to flow below the edge of the screen

## Change description

- moved the input and buttons to a separate component in the stack with fixed height, leaving the center as the flexible area with scrolling

--- a/client/src/app/components/layouts/SideBarContent/SideBarContent.module.css
+++ b/client/src/app/components/layouts/SideBarContent/SideBarContent.module.css
@@ -1,12 +1,17 @@
 .sideBarHeader {
   border-bottom: 1px solid var(--mantine-color-gray-2);
   padding: 2px 6px 2px 6px;
+  flex-shrink: 0; /* Prevents it from shrinking */
 }
 
 .sideBarBody {
   padding: 2px 6px 2px 6px;
+  flex-grow: 1; /* Takes up all available space between header and footer */
 }
 
 .sideBarFooter {
   border-top: 1px solid var(--mantine-color-gray-2);
+  flex-shrink: 0; /* Prevents it from shrinking */
+  padding: 2px 6px 2px 6px;
+  background-color: 'blue';
 }
